@@ -4,11 +4,13 @@ CHANGES IN VERSION 2.7.2b
 
 NEW FEATURES
 
+   o Add support for the SLURM scheduler thanks to Anthony D'Ippolito !
+
    o Add support for the SGE scheduler thanks to Guipeng Li !
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
-   o be careful - configuration files for installing and running HiC-Pro have been updated to manage multiple scheduler !
+   o be careful - configuration files for installing and running HiC-Pro have been updated to manage multiple schedulers !
 
 
 
